Basic command setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
-/config/secrets.json
+/src/config/secrets.json
+/lib
 
 # Created by https://www.gitignore.io/api/node,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,visualstudiocode
