Updated version info

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xidrian-shadoodlebot",
-  "version": "0.0.1",
-  "description": "A bot for Twitch streamer Xidrian, to allow some functionalities which are difficult to come by or are not liked by Xidrian himself.",
+  "version": "0.2.0",
+  "description": "A bot for Twitch streamer Xidrian, to allow some functionalities which are difficult to come by or where other implementations are not liked by Xidrian himself.",
   "main": "src/bot.ts",
   "scripts": {
     "build": "tsc && node ./lib/bot.js",
